Bug 174118 - Crashing and forcing number of desktops to one
Summary: Crashing and forcing number of desktops to one
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 176001 300672 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-11-02 19:41 UTC by gd
Modified: 2012-05-27 19:43 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.4
Sentry Crash Report:
thomas.luebking: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description gd 2008-11-02 19:41:12 UTC
Version:            (using KDE 4.1.2)
OS:                Linux
Installed from:    Ubuntu Packages

I updated Kubuntu 8.04.1 to 8.10. Upon restart, number of desktops was one from 4 i use. Every time i set the number of desktops to 4, click to one of them and open a new application in that desktop, a crash occurs, and my desktops are reduced to 1 again. I dont use compiz and have disabled the kde desktop effects. Video card is nvidia 6150 with Nvidia drivers. Here is the debug info 

Application: KWin (kwin), signal SIGABRT
[Thread debugging using libthread_db enabled]
[New Thread 0xb5d226e0 (LWP 7011)]
[KCrash handler]
#6  0xffffe424 in __kernel_vsyscall ()
#7  0xb7e81880 in raise () from /lib/tls/i686/cmov/libc.so.6
#8  0xb7e83248 in abort () from /lib/tls/i686/cmov/libc.so.6
#9  0xb7a26795 in qt_message_output () from /usr/lib/libQtCore.so.4
#10 0xb7a26872 in qFatal () from /usr/lib/libQtCore.so.4
#11 0xb7a268cc in qt_assert_x () from /usr/lib/libQtCore.so.4
#12 0xb7fe20a2 in KWin::Placement::placeCascaded (this=0x81fae88, 
    c=0x8335658, area=@0xbf89483c, nextPlacement=KWin::Placement::Smart)
    at /usr/include/qt4/QtCore/qlist.h:395
#13 0xb7fe2b33 in KWin::Placement::place (this=0x81fae88, c=0x8335658, 
    area=@0xbf89483c)
    at /build/buildd/kdebase-workspace-4.1.2/kwin/placement.cpp:68
#14 0xb800942d in KWin::Client::manage (this=0x8335658, w=25165825, 
    isMapped=false)
    at /build/buildd/kdebase-workspace-4.1.2/kwin/manage.cpp:326
#15 0xb7fd5490 in KWin::Workspace::createClient (this=0x812bea8, w=25165825, 
    is_mapped=<value optimized out>)
    at /build/buildd/kdebase-workspace-4.1.2/kwin/workspace.cpp:493
#16 0xb7ffca57 in KWin::Workspace::workspaceEvent (this=0x812bea8, 
    e=0xbf894ebc) at /build/buildd/kdebase-workspace-4.1.2/kwin/events.cpp:367
#17 0xb7fe8962 in KWin::Application::x11EventFilter (this=0xbf8951d4, 
    e=0xbf894ebc) at /build/buildd/kdebase-workspace-4.1.2/kwin/main.cpp:360
#18 0xb714eade in ?? () from /usr/lib/libQtGui.so.4
#19 0xb715f515 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#20 0xb718a7ea in ?? () from /usr/lib/libQtGui.so.4
#21 0xb68796f8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#22 0xb687cda3 in ?? () from /usr/lib/libglib-2.0.so.0
#23 0xb687cf61 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#24 0xb7b49478 in QEventDispatcherGlib::processEvents ()
   from /usr/lib/libQtCore.so.4
#25 0xb7189ee5 in ?? () from /usr/lib/libQtGui.so.4
#26 0xb7b1d52a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#27 0xb7b1d6ea in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#28 0xb7b1fda5 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#29 0xb70ef767 in QApplication::exec () from /usr/lib/libQtGui.so.4
#30 0xb7fec8ce in kdemain (argc=3, argv=0xbf8953a4)
    at /build/buildd/kdebase-workspace-4.1.2/kwin/main.cpp:511
#31 0x080485a2 in main (argc=)
    at /build/buildd/kdebase-workspace-4.1.2/obj-i486-linux-gnu/kwin/kwin_dummy.cpp:3
#0  0xffffe424 in __kernel_vsyscall ()
Comment 1 gd 2008-11-06 23:03:09 UTC
I updated today my KDE desktop to 4.1.3, using aptitude and the ubuntu repositories. I still get the same error from kwin, and now i also get an error from plasma. Here is the debug info for plasma and kwin

 Application: Plasma Workspace (plasma), signal SIGABRT
[Thread debugging using libthread_db enabled]
[New Thread 0xb4d1c6e0 (LWP 5734)]
[New Thread 0xb27e0b90 (LWP 5736)]
[New Thread 0xb3102b90 (LWP 5735)]
[KCrash handler]
#6  0xb80c6430 in __kernel_vsyscall ()
#7  0xb7f32880 in raise () from /lib/tls/i686/cmov/libc.so.6
#8  0xb7f34248 in abort () from /lib/tls/i686/cmov/libc.so.6
#9  0xb7608795 in qt_message_output () from /usr/lib/libQtCore.so.4
#10 0xb7608872 in qFatal () from /usr/lib/libQtCore.so.4
#11 0xb76088cc in qt_assert_x () from /usr/lib/libQtCore.so.4
#12 0xb3242408 in Pager::paintInterface (this=0x882fdd0, painter=0xbffc6364, 
    option=0xbffc5f24, contentsRect=@0xbffc5d48)
    at /usr/include/qt4/QtCore/qlist.h:395
#13 0xb7df2a36 in Plasma::Applet::paint (this=0x882fdd0, painter=0xbffc6364, 
    option=0xbffc5f24, widget=0x0)
    at /build/buildd/kdebase-workspace-4.1.3/libs/plasma/applet.cpp:902
#14 0xb721e724 in ?? () from /usr/lib/libQtGui.so.4
#15 0xb722218d in ?? () from /usr/lib/libQtGui.so.4
#16 0xb7222601 in QGraphicsScene::drawItems () from /usr/lib/libQtGui.so.4
#17 0xb7235fac in QGraphicsView::drawItems () from /usr/lib/libQtGui.so.4
#18 0xb723f67c in QGraphicsView::paintEvent () from /usr/lib/libQtGui.so.4
#19 0xb6ce178b in QWidget::event () from /usr/lib/libQtGui.so.4
#20 0xb7018f53 in QFrame::event () from /usr/lib/libQtGui.so.4
#21 0xb70af75f in QAbstractScrollArea::viewportEvent ()
   from /usr/lib/libQtGui.so.4
#22 0xb723cc8f in QGraphicsView::viewportEvent () from /usr/lib/libQtGui.so.4
#23 0xb70b1d05 in ?? () from /usr/lib/libQtGui.so.4
#24 0xb770004a in QCoreApplicationPrivate::sendThroughObjectEventFilters ()
   from /usr/lib/libQtCore.so.4
#25 0xb6c898ca in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#26 0xb6c9183a in QApplication::notify () from /usr/lib/libQtGui.so.4
#27 0xb7bcfb2d in KApplication::notify (this=0x8758968, receiver=0x8b1c8f8, 
    event=0xbffc752c)
    at /build/buildd/kde4libs-4.1.3/kdeui/kernel/kapplication.cpp:311
#28 0xb7700e61 in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#29 0xb6cea41e in ?? () from /usr/lib/libQtGui.so.4
#30 0xb6ce0150 in QWidgetPrivate::drawWidget () from /usr/lib/libQtGui.so.4
#31 0xb6ce08f2 in QWidgetPrivate::paintSiblingsRecursive ()
   from /usr/lib/libQtGui.so.4
#32 0xb6ce07fe in QWidgetPrivate::paintSiblingsRecursive ()
   from /usr/lib/libQtGui.so.4
#33 0xb6cdfdc8 in QWidgetPrivate::drawWidget () from /usr/lib/libQtGui.so.4
#34 0xb6e4ffae in ?? () from /usr/lib/libQtGui.so.4
#35 0xb6e50477 in ?? () from /usr/lib/libQtGui.so.4
#36 0xb6ce15b6 in QWidget::event () from /usr/lib/libQtGui.so.4
#37 0xb7018f53 in QFrame::event () from /usr/lib/libQtGui.so.4
#38 0xb70b022d in QAbstractScrollArea::event () from /usr/lib/libQtGui.so.4
#39 0xb72366b4 in QGraphicsView::event () from /usr/lib/libQtGui.so.4
#40 0xb6c898ec in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#41 0xb6c9183a in QApplication::notify () from /usr/lib/libQtGui.so.4
#42 0xb7bcfb2d in KApplication::notify (this=0x8758968, receiver=0x8b50c18, 
    event=0x886a848)
    at /build/buildd/kde4libs-4.1.3/kdeui/kernel/kapplication.cpp:311
#43 0xb7700e61 in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#44 0xb7701ae5 in QCoreApplicationPrivate::sendPostedEvents ()
   from /usr/lib/libQtCore.so.4
#45 0xb7701cdd in QCoreApplication::sendPostedEvents ()
   from /usr/lib/libQtCore.so.4
#46 0xb772b82f in ?? () from /usr/lib/libQtCore.so.4
#47 0xb5a236f8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#48 0xb5a26da3 in ?? () from /usr/lib/libglib-2.0.so.0
#49 0xb5a26f61 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#50 0xb772b478 in QEventDispatcherGlib::processEvents ()
   from /usr/lib/libQtCore.so.4
#51 0xb6d23ee5 in ?? () from /usr/lib/libQtGui.so.4
#52 0xb76ff52a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#53 0xb76ff6ea in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#54 0xb7701da5 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#55 0xb6c89767 in QApplication::exec () from /usr/lib/libQtGui.so.4
#56 0xb807b491 in kdemain (argc=1, argv=0xbffc8324)
    at /build/buildd/kdebase-workspace-4.1.3/plasma/plasma/main.cpp:58
#57 0x080485b2 in main (argc=)
    at /build/buildd/kdebase-workspace-4.1.3/obj-i486-linux-gnu/plasma/plasma/plasma_qgv_dummy.cpp:3
#0  0xb80c6430 in __kernel_vsyscall ()



Application: KWin (kwin), signal SIGABRT
[Thread debugging using libthread_db enabled]
[New Thread 0xb5d416e0 (LWP 5730)]
[KCrash handler]
#6  0xb80b6430 in __kernel_vsyscall ()
#7  0xb7ea2880 in raise () from /lib/tls/i686/cmov/libc.so.6
#8  0xb7ea4248 in abort () from /lib/tls/i686/cmov/libc.so.6
#9  0xb7a46795 in qt_message_output () from /usr/lib/libQtCore.so.4
#10 0xb7a46872 in qFatal () from /usr/lib/libQtCore.so.4
#11 0xb7a468cc in qt_assert_x () from /usr/lib/libQtCore.so.4
#12 0xb80030c2 in KWin::Placement::placeCascaded (this=0x9f095d0, 
    c=0xa0e6ff0, area=@0xbfdb5d5c, nextPlacement=KWin::Placement::Smart)
    at /usr/include/qt4/QtCore/qlist.h:395
#13 0xb8003b53 in KWin::Placement::place (this=0x9f095d0, c=0xa0e6ff0, 
    area=@0xbfdb5d5c)
    at /build/buildd/kdebase-workspace-4.1.3/kwin/placement.cpp:68
#14 0xb802a47d in KWin::Client::manage (this=0xa0e6ff0, w=39846478, 
    isMapped=false)
    at /build/buildd/kdebase-workspace-4.1.3/kwin/manage.cpp:326
#15 0xb7ff6490 in KWin::Workspace::createClient (this=0x9dcae60, w=39846478, 
    is_mapped=<value optimized out>)
    at /build/buildd/kdebase-workspace-4.1.3/kwin/workspace.cpp:493
#16 0xb801daa7 in KWin::Workspace::workspaceEvent (this=0x9dcae60, 
    e=0xbfdb63dc) at /build/buildd/kdebase-workspace-4.1.3/kwin/events.cpp:367
#17 0xb8009982 in KWin::Application::x11EventFilter (this=0xbfdb66f4, 
    e=0xbfdb63dc) at /build/buildd/kdebase-workspace-4.1.3/kwin/main.cpp:360
#18 0xb716eade in ?? () from /usr/lib/libQtGui.so.4
#19 0xb717f515 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#20 0xb71aa7ea in ?? () from /usr/lib/libQtGui.so.4
#21 0xb68986f8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#22 0xb689bda3 in ?? () from /usr/lib/libglib-2.0.so.0
#23 0xb689bf61 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#24 0xb7b69478 in QEventDispatcherGlib::processEvents ()
   from /usr/lib/libQtCore.so.4
#25 0xb71a9ee5 in ?? () from /usr/lib/libQtGui.so.4
#26 0xb7b3d52a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#27 0xb7b3d6ea in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#28 0xb7b3fda5 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#29 0xb710f767 in QApplication::exec () from /usr/lib/libQtGui.so.4
#30 0xb800d8ee in kdemain (argc=3, argv=0xbfdb68c4)
    at /build/buildd/kdebase-workspace-4.1.3/kwin/main.cpp:511
#31 0x080485a2 in main (argc=)
    at /build/buildd/kdebase-workspace-4.1.3/obj-i486-linux-gnu/kwin/kwin_dummy.cpp:3
#0  0xb80b6430 in __kernel_vsyscall ()

Comment 2 sboyce 2008-11-12 21:19:33 UTC
openSUSE 11.1 Beta(3Plus -5), KDE 4.1.2/4.1.72 reports that kwin crashed, backtrace shows nothing. On another box with 4.1.2, everything is normal. On this box, the screen suddenly changes to show all windows jumbled up, CTRL-F1 CTRL-F7 brings all back to normal. The bad box has an GEForce 8800GTS and the good one has a GEForce 9600, both running NVIDIA-Linux-x86_64-177.80 driver and I THINK it started happening after this driver was installed.
For the first time I suffered a hard lock up while trying to file this report. Back up now on KDE 3.5.10 which works without problems.

Just noticed the thread is for Ubuntu, can file a new bug if it is not pertinent to the present subject.
Comment 3 Dario Andres 2008-12-04 21:10:46 UTC
*** Bug 176001 has been marked as a duplicate of this bug. ***
Comment 4 Rafal 2009-01-25 00:27:15 UTC
After update to KDE 4.2 RC1 everything works ok now. 
Comment 5 Dario Andres 2009-08-02 21:08:05 UTC
@gd: can you confirm this is working on KDE4.2+ ? Thanks
Comment 6 Martin Flöser 2009-09-06 15:21:53 UTC
from comment #4 I assume this has been resolved. If not please reopen.
Comment 7 Thomas Lübking 2012-05-26 16:26:19 UTC
*** Bug 300672 has been marked as a duplicate of this bug. ***
Comment 8 Thomas Lübking 2012-05-26 16:26:55 UTC
there seems a bug in cascaded placement
Comment 9 Thomas Lübking 2012-05-26 19:17:30 UTC
the issue is that Placement::reinitCascading() is just called somewhen when reconfiguring and not whenever Workspace::setNumberOfDesktops() is called.

This bug doe only affect cascaded window placement (kcmshell4 kwinoptions, last tab)
-> switch to some other strategy to prevent it until the fixed version hits your distro.



https://git.reviewboard.kde.org/r/105063/
Comment 10 o6016499 2012-05-26 19:56:21 UTC
yes, i'm using cascade window placement.

thanks for looking into it! :)
Comment 11 Thomas Lübking 2012-05-26 20:05:36 UTC
Git commit b94ccd516710f8b6a951bbac969e1627f466a6cb by Thomas Lübking.
Committed on 26/05/2012 at 21:06.
Pushed by luebking into branch 'master'.

move reinitCascading to setNumberOfDesktops because it updates an internal list that is trusted to be of (at least) desktopCount_ size
FIXED-IN: 4.9
REVIEW: 105063

M  +4    -4    kwin/workspace.cpp

http://commits.kde.org/kde-workspace/b94ccd516710f8b6a951bbac969e1627f466a6cb
Comment 12 Thomas Lübking 2012-05-27 19:43:35 UTC
Git commit 0910f10fbdc0e3a5165011055be35a91836b8d29 by Thomas Lübking.
Committed on 26/05/2012 at 22:12.
Pushed by luebking into branch 'KDE/4.8'.

move reinitCascading to setNumberOfDesktops because it updates an internal list that is trusted to be of (at least) desktopCount_ size

hand backport of b94ccd516710f8b6a951bbac969e1627f466a6cb
FIXED-IN: 4.8.4
REVIEW: 105063

M  +4    -4    kwin/workspace.cpp

http://commits.kde.org/kde-workspace/0910f10fbdc0e3a5165011055be35a91836b8d29