move reinitCascading to setNumberOfDesktops because it updates an internal list that is trusted to be of (at least) desktopCount_ size

BUG: 174118
FIXED-IN: 4.9
REVIEW: 105063